--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 .App {
   text-align: center;
+  display: flex; flex-flow: column;
+  width: 100%; height: 100%; 
 }
 
+.full-height{
+  display: flex;
+  flex-flow: column;
+  flex: 1;
+}
