--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
+*{
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+
+html {
+  width: 100%; height: 100%;
+}
+
+#root{
+  width: 100%; height: 100%;
+}
+
 body {
   margin: 0;
+  width: 100%; height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
