--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,5 +1,24 @@
 header {
     width: 100%;
-    height: 100px;
+    height: 70px;
     display: flex;
+    align-items: center; justify-content: space-between;
+    color: white;
+    padding: 0px 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.options-header{
+    display: flex;
+    align-items: center; justify-content: space-between;
+    width: 70%;
+}
+
+.logo {
+    height: 40px; width: 80px;
+}
+
+.logo .img-logo{
+    width: 100%; height: 100%;
 }
