--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,12 +7,31 @@ header {
     padding: 0px 30px;
     padding-top: 5px;
     padding-bottom: 5px;
+    font-weight: bolder;
 }
 
 .options-header{
     display: flex;
     align-items: center; justify-content: space-between;
     width: 70%;
+}
+
+.options-header .option{
+    display: flex; flex-flow: row;
+    justify-content: space-evenly;
+    width: 120px;
+}
+
+.options-header .option .svg-option {
+    height: 20px; width: 20px;
+}
+
+.options-header .option .plus {
+    height: 18px; width: 18px;
+}
+
+.options-header .option .svg-option svg {
+    height: 100%; width: 100%;
 }
 
 .logo {
