--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -20,6 +20,7 @@ header {
     display: flex; flex-flow: row;
     justify-content: space-evenly;
     width: 120px;
+    cursor: pointer;
 }
 
 .options-header .option .svg-option {
@@ -36,8 +37,26 @@ header {
 
 .logo {
     height: 40px; width: 80px;
+    margin-right: 30px;
 }
 
 .logo .img-logo{
     width: 100%; height: 100%;
+}
+
+.text-option {
+    position: relative;
+}
+
+.span-style {
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    height: 0; width: 0;
+    transition: all 0.4s ease;
+    border-bottom: 2px solid white;
+}
+
+.option:hover .span-style {
+    width: 100%;
 }
