--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,11 +1,14 @@
 
-.slider {
+#slider-created { /*Slider dentro del Carousek */
     position: relative;
     flex: 0 0 auto; /* Para que no se encojan debido al display Flex*/
-    height: 100%; width: 100%;
+    height: 100%; width: 98%;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 .slider-effect-border{
@@ -53,4 +56,5 @@
     margin-left: auto;
     width: 70%; height: 300px;
     display: block;
+
 }
