--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -21,7 +21,7 @@ header {
     padding-bottom: 5px;
     font-weight: bolder;
     z-index: 4;
-    transition: all 0.2s;
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
 }
 
 .options-header{
