--- a/src/styles/imageCategories.css
+++ b/src/styles/imageCategories.css
@@ -1,30 +1,33 @@
-.image-category-section {
+.images-category-container{
     width: 100%; height: 220px;
-    display: flex;
-    align-items: center; justify-content: center;
+    padding: 50px 40px;
+    display: grid;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+    column-gap: 60px;
 }
 
-.image-category-section .images-category-container{
-    width: 92%; height: 90%;
-    display: flex; 
-    align-items: center; justify-content: space-between;
-}
-
-.image-category-section .images-category-container .image-category {
-    height: 130px; width: 200px;
+.images-category-container .image-category {
     border: 3px solid rgb(138, 126, 126);
     border-radius: 10px;
     display: flex; align-items: center; justify-content: center;
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+    cursor: pointer;
+}
+
+.image-category:hover {
+    transform: scale(1.05);
+    border: 3px solid rgb(231, 228, 228);
 }
 
 .image-category .image-png{
-    height: 50px; width: 130px;
+    height: 50%; width: 62%;
 }
 
 .image-category .pixar {
     height: 30px; width: 130px;
 }
 
-.image-category .disney {
-    color: white;
+.image-category .national{
+    width: 70%;
+    height: 55px;
 }
