--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -14,7 +14,7 @@
 .slider-effect-border{
     position: absolute;
     height: 100%; width: 100%;
-    transition: 0.3s ease;
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
     border: 4px solid silver;
     opacity: 0;
     z-index: 3;
