Change slider's images

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,16 +1,16 @@
 /* Contenedor */
 .carousel-section{
     width: 100%;
-    height: 350px;
+    height: 380px;
     position: relative;
     padding: 20px 0px;
     overflow-x: hidden;
 }
 
-.carousel-section .carousel {
-    width: 93%;
-    height: 300px;
+.carousel-section .carousel { /*Contenedor que cambiar el ancho y alto en la pantalla,
+    pero también se debe cambiar el tamaño de imagen.*/
+    width: 90%;
+    height: 330px;
     margin: auto; /* Para centrar */
-    box-shadow: rgba(38, 38, 73, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
 }
 
