--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,14 +1,12 @@
 
-#slider-created { /*Slider dentro del Carousek */
+#slider-created { /*Slider dentro del Carousel */
     position: relative;
     flex: 0 0 auto; /* Para que no se encojan debido al display Flex*/
     height: 100%; width: 98%;
-    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
 .slider-effect-border{
@@ -51,10 +49,10 @@
     text-transform: capitalize;
 }
 
-#slider-created #poster {
+#slider-created #poster { /* Se debe cambiar la imagen también para ver cambios en alto y ancho */
     object-fit: cover;
     margin-left: auto;
-    width: 70%; height: 300px;
+    width: 100%; height: 310px;
     display: block;
 
 }
