--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,10 +1,9 @@
 /* Contenedor */
 .carousel-section{
     width: 100%;
-    height: 380px;
-    position: relative;
+    height: 330px;
     padding: 20px 0px;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .carousel-section .carousel { /*Contenedor que cambiar el ancho y alto en la pantalla,
@@ -12,5 +11,19 @@
     width: 90%;
     height: 330px;
     margin: auto; /* Para centrar */
+    position: relative;
+}
+
+.carousel-section .carousel .slick-dots{
+    position: absolute;
+    width: 50%;
+    bottom: -10px;
+    right: 50px;
+    text-align: end;
+}
+
+.carousel-section .slick-slider{
+    display: inline-block;
+    height: 100%;
 }
 
