--- a/src/styles/movieCard.css
+++ b/src/styles/movieCard.css
@@ -1,3 +1,17 @@
 .movie-card {
-    width: 150px; height: 100%;
+    min-width: calc(100%/4.6); height: 90%;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+    position: relative;
+    border: 4px solid transparent;
+}
+
+.movie-card:hover{
+    transform: scale(1.05);
+    border: 4px solid white;
+}
+
+.image-movie-card {
+    height: 100%; width: 100%;
 }
