--- a/src/styles/recommended.css
+++ b/src/styles/recommended.css
@@ -1,3 +1,26 @@
 .container-movies {
-    width: 100%; height: 200px;
+    width: 100%; height: 240px;
+    display: flex; flex-flow: column;
+    justify-content: space-between;
+    padding: 30px 80px;
+    padding-top: 0px;
+    padding-right: 0px;
+}
+
+.title-section {
+    color: white;
+    font-size: 26px;
+    font-weight: 600;
+    text-align: start;
+    display: flex;
+    align-items: center; 
+}
+
+.images-section-movies {
+    display: flex; flex-flow: row;
+    align-items: center;
+    padding-left: 10px;
+    height: 80%; width: 100%;
+    overflow: hidden;
+    gap: 30px;
 }
