Create carousel for Recommended component
The carousel was made leveraging the react slick librery. A single
slider shows 4 images, each one representing the available show in the
website.

--- a/src/styles/recommended.css
+++ b/src/styles/recommended.css
@@ -5,6 +5,7 @@
     padding: 30px 80px;
     padding-top: 0px;
     padding-right: 0px;
+    overflow: visible;
 }
 
 .title-section {
@@ -19,8 +20,37 @@
 .images-section-movies {
     display: flex; flex-flow: row;
     align-items: center;
-    padding-left: 10px;
     height: 80%; width: 100%;
-    overflow: hidden;
-    gap: 30px;
+    overflow-x: visible;
 }
+
+#images-section-movies .slick-slider {
+    width: 97%; height: 100%;
+    display: flex; align-items: center; justify-content: flex-start;
+    /*background-color: blueviolet;*/
+    overflow: visible;
+    box-sizing: border-box;
+}
+
+#images-section-movies .slick-slider .slick-list{
+    overflow: visible;
+    /*background: grey;*/
+    width: 100%; height: 100%;
+}
+
+
+#images-section-movies .slick-slider button{
+    z-index: 2;
+}
+
+#images-section-movies .slick-slider .slick-track { /*Es el DIV que se va moviendo para mostrar imágenes*/
+    height: 100%;
+    display: flex; align-items: center; justify-content: flex-start;
+    text-align: center;
+}
+
+#images-section-movies .slick-slider .slick-track .slick-slide { /*ESta es cada tarjeta individual en donde
+    están las tarjetas creadas. Viene por defecto,*/
+    display: flex; align-items: center;
+}
+
