--- a/src/styles/movieCard.css
+++ b/src/styles/movieCard.css
@@ -1,10 +1,11 @@
-.movie-card {
-    min-width: calc(100%/4.6); height: 90%;
+#movie-card {
+    height: 150px; min-width: 290px;
     border-radius: 10px;
     overflow: hidden;
     transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
     position: relative;
     border: 4px solid transparent;
+    align-self: center;
 }
 
 .movie-card:hover{
@@ -12,6 +13,6 @@
     border: 4px solid white;
 }
 
-.image-movie-card {
+.image-movie-card { /* imagenes */
     height: 100%; width: 100%;
 }
