--- a/src/styles/movieCard.css
+++ b/src/styles/movieCard.css
@@ -1,5 +1,5 @@
 #movie-card {
-    height: 150px; min-width: 290px;
+    height: 100%; width: 100%;
     border-radius: 10px;
     overflow: hidden;
     transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
@@ -8,7 +8,7 @@
     align-self: center;
 }
 
-.movie-card:hover{
+#movie-card:hover{
     transform: scale(1.05);
     border: 4px solid white;
 }
