--- a/src/styles/movieCarousel.css
+++ b/src/styles/movieCarousel.css
@@ -1,11 +1,11 @@
 .container-movies {
-    width: 100%; height: 240px;
+    width: 100%; height: 210px;
     display: flex; flex-flow: column;
     justify-content: space-between;
     padding: 30px 80px;
     padding-top: 0px;
     padding-right: 0px;
-    overflow: visible;
+    overflow: hidden;
 }
 
 .title-section {
@@ -15,21 +15,19 @@
     text-align: start;
     display: flex;
     align-items: center; 
-    overflow: visible;
 }
 
 .images-section-movies {
     display: flex; flex-flow: row;
     align-items: center;
     height: 80%; width: 100%;
-    overflow: visible;
+    
 }
 
 #images-section-movies .slick-slider {
     width: 97%; height: 100%;
     display: flex; align-items: center; justify-content: flex-start;
     /*background-color: blueviolet;*/
-    overflow: visible;
     box-sizing: border-box;
 }
 
@@ -47,13 +45,11 @@
 #images-section-movies .slick-slider .slick-track { /*Es el DIV que se va moviendo para mostrar imágenes*/
     height: 100%;
     display: flex; align-items: center; justify-content: flex-start;
-    text-align: center;
-    overflow: visible;
 }
 
 #images-section-movies .slick-slider .slick-track .slick-slide { /*ESta es cada tarjeta individual en donde
     están las tarjetas creadas. Viene por defecto,*/
     display: flex; align-items: center;
-    overflow: visible;
+
 }
 
