--- a/src/styles/movieCard.css
+++ b/src/styles/movieCard.css
@@ -4,13 +4,25 @@
     overflow: hidden;
     transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
     position: relative;
-    border: 4px solid transparent;
     align-self: center;
+    box-shadow: rgb(0, 0, 0) 0px 20px 20px -20px;
+}
+
+#movie-card .effect-border{
+    width: 100%; height: 100%;
+    border-radius: 10px;
+    box-sizing: border-box;
+    position: absolute;
+    border: 4px solid white;
+    opacity: 0;
 }
 
 #movie-card:hover{
     transform: scale(1.05);
-    border: 4px solid white;
+}
+
+#movie-card:hover .effect-border{
+    opacity: 1;
 }
 
 .image-movie-card { /* imagenes */
