--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -6,6 +6,7 @@
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: rgb(0, 0, 0) 0px 25px 20px -20px;
 }
 
 .slider-effect-border{
@@ -53,5 +54,4 @@
     margin-left: auto;
     width: 100%; height: 310px;
     display: block;
-
 }
