--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -36,16 +36,35 @@
     opacity: 1;
 }
 
+.search-container .search-form input:focus::placeholder {
+    /*Efecto al placeholder*/
+    color: white;
+}
+
 .search-container .search-form input{
     background-color: #00000000;
     background-image: linear-gradient(0deg, #ffffff2f 0%, #ffffff0d);
     border: none;
     padding: 0px 50px;
+    display: flex; align-items: center;
+    font-size: 40px;
+    color: rgb(130, 130, 130);
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+}
+
+.search-container .search-form input:focus{
+    color: rgb(255, 255, 255);
 }
 
 
 .search-container .search-form input::placeholder {
-    font-size: 30px;
+    font-size: 50px;
+    align-self: center;
+    font-weight: 600;
+    color: rgb(130, 130, 130);
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+    position: absolute;
+    top: 20px;
 }
 
 .filtered-movies {
