--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -7,7 +7,7 @@
 
 .search-container {
     width: 100%;
-    height: 150px;
+    height: 110px;
     transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
     position: relative;
 }
@@ -69,4 +69,10 @@
 
 .filtered-movies {
     width: 100%; height: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
+    grid-template-rows: repeat(auto-fit, minmax(150px, 150px));
+    gap: 50px;
+    padding: 50px;
 }
+
