--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -70,6 +70,7 @@
 .filtered-movies {
     width: 100%; height: 100%;
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
     grid-template-rows: repeat(auto-fit, minmax(150px, 150px));
     gap: 50px;
