--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -7,7 +7,7 @@
 
 .search-container {
     width: 100%;
-    height: 110px;
+    min-height: 110px; max-height: 110px;
     transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
     position: relative;
 }
