--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,5 @@
 footer {
-    width: 100%; height: 250px;
+    width: 100%; min-height: 250px; max-height: 250px;
     background-color: rgb(14, 16, 26);
     display: flex; flex-flow: column; 
     justify-content: space-between; align-items: center;
