--- a/src/styles/formSignUp.css
+++ b/src/styles/formSignUp.css
@@ -6,3 +6,19 @@
     transition: 350ms ease-in-out 0s;
     opacity: 1;
 }
+
+.pwd-repeat {
+    position: relative;
+}
+
+.pwds-incorrect {
+    position: absolute;
+    width: 100%; border: 1px solid red;
+    background-color: rgba(240, 54, 54, 0.54);
+    border-radius: 5px;
+    height: 40px;
+    bottom: -50px;
+    display: none; align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
