--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,7 @@
 
 html {
   width: 100%; height: 100%;
-  /*background: url('./images/home-background.png') center center no-repeat fixed;*/
-  background-color: rgb(26, 29, 41);
+  /*background-color: rgb(26, 29, 41);*/
 }
 
 #root{
