--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -22,6 +22,7 @@ header {
     font-weight: bolder;
     z-index: 101;
     transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.03) 15%, rgba(0, 0, 0, 0.125) 30%, rgba(0, 0, 0, 0.25) 46%, rgba(0, 0, 0, 0.4) 61%, rgba(0, 0, 0, 0.553) 75%, rgba(0, 0, 0, 0.694) 88%, rgba(0, 0, 0, 0.8));
 }
 
 .options-header{
