--- a/src/styles/logInSection.css
+++ b/src/styles/logInSection.css
@@ -3,6 +3,7 @@
     display: flex; flex-flow: column;
     align-items: center;
     padding-top: 40px;
+    background-color: rgb(26, 29, 41);
 }
 
 .image-log-in {
