--- a/src/styles/originals.css
+++ b/src/styles/originals.css
@@ -1,6 +1,7 @@
 .originals-section {
     width: 100%; height: 100%;
     display: flex; flex-flow: column;
+    background-color: rgb(26, 29, 41);
 }
 
 .originals-placeholder {
