--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -80,3 +80,17 @@ header {
 .link {
     color: white;
 }
+
+.profile-user{
+    height: 100%;
+    display: flex; align-items: center; justify-content: space-evenly;
+    width: 120px;
+}
+
+.profile-picture-header{
+    width: 50px; height: 50px;
+}
+
+.profile-picture-header .header-picture-profile {
+    width: 100%; height: 100%;
+}
