--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -85,6 +85,7 @@ header {
     height: 100%;
     display: flex; align-items: center; justify-content: space-evenly;
     width: 120px;
+    position: relative;
 }
 
 .profile-picture-header{
@@ -93,4 +94,37 @@ header {
 
 .profile-picture-header .header-picture-profile {
     width: 100%; height: 100%;
+}
+
+.username-header,
+.profile-picture-header{
+    z-index: 20;
+}
+
+.signOut-user{
+    position: absolute;
+    top: -10px; right: -30px;
+    height: 0px; width: 180px;
+    display: flex; align-items: center; justify-content: flex-start;
+    background-color: rgb(26, 29, 41);
+    border-radius: 10px ;
+    border: 1px solid grey;
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+}
+
+.button-log-out{
+    display: none;
+    border-radius: 5px;
+    border: 2px solid rgb(255, 255, 255);
+    margin-left: 20px;
+    padding: 10px 18px;
+    cursor: pointer;
+}
+
+.profile-user:hover .signOut-user {
+    height: 200px;
+}
+
+.profile-user:hover .button-log-out {
+    display: flex;
 }
