--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,6 @@
 .default-header {
     width: 100%;
-    height: 70px;
+    min-height: 70px; max-height: 70px;
     display: flex;
     align-items: center; justify-content: space-between;
     color: white;
