--- a/src/styles/originals.css
+++ b/src/styles/originals.css
@@ -7,17 +7,12 @@
 .originals-placeholder {
     width: 100%; height: 230px;
     transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
-    display: flex; align-items: center;
-    
-}
-
-.originals-placeholder-selected {
-    height: 150px;
-    transition: 0.350s ease-in-out 0s;
+    display: flex; align-items: center; justify-content: center;
+    background-color: aqua;
 }
 
 .originals-placeholder .originals-title{
-    width: 100%; height: 200px;
+    width: 100%; height: 230px;
     color: white;
     font-size: 50px;
     display: flex; align-items: center; justify-content: center;
