Fix moviesAndSeries title when scrolling

--- a/src/styles/moviesAndSeries.css
+++ b/src/styles/moviesAndSeries.css
@@ -1,24 +1,27 @@
 .moviesAndSeries-section {
     width: 100%; height: 100%;
     display: flex; flex-flow: column;
+    background-color: rgb(26, 29, 41);
 }
 
 .title-section-placeholder {
-    width: 100%; height: 150px;
+    width: 100%; height: 110px;
     display: flex;
 }
 
 .title-section-placeholder .title-section-container {
-    width: 100%; height: 150px;
+    width: 100%; height: 110px;
     display: flex; flex-flow: row;
     align-items: center; justify-content: flex-start;
     gap: 30px;
     padding-left: 100px;
+    z-index: 8;
+    background-color: rgb(26, 29, 41);
 }
 
 .title-section-movies-series {
     color: white; 
-    font-size: 60px;
+    font-size: 50px;
 }
 
 .section-cards {
