--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -131,3 +131,16 @@ header {
     opacity: 1;
     transition: 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
 }
+
+.log-in-button-header {
+    height: 40px; width: 100px;
+    display: flex; align-items: center; justify-content: center;
+    border-radius: 5px;
+    border: 2px solid white;
+    transition: 100ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+    font-size: 20px;
+}
+
+.log-in-button-header:hover {
+    transform: scale(0.95);
+}
