Create context of userID to use in MovieCard
In the MovieCard component a div containing an icon to add the current
movie to the watchlist should appear as soon as a user is logged in.
However, if no user is logged in then an empty div with display none
should take that place.

--- a/src/styles/movieCard.css
+++ b/src/styles/movieCard.css
@@ -28,3 +28,13 @@
 .image-movie-card { /* imagenes */
     height: 100%; width: 100%;
 }
+
+.add-icon-movieCard{
+    position: absolute;
+    top: 0;
+    background-color: black;
+}
+
+.add-icon-userID-null {
+    display: none;
+}
