--- a/src/styles/movieCard.css
+++ b/src/styles/movieCard.css
@@ -31,9 +31,37 @@
 
 .add-icon-movieCard{
     position: absolute;
-    top: 0;
-    background-color: black;
+    opacity: 0;
+    width: 40px; height: 40px;
+    border-radius: 50%;
+    bottom: 0px;
+    left: 10px;
+    background-color: rgb(26, 29, 41);
+    transition: 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+    cursor: pointer;
+    overflow: hidden;
 }
+
+#movie-card:hover .add-icon-movieCard{
+    opacity: 1;
+    bottom: 20px;
+}
+
+.add-icon-movieCard:hover svg{
+    background-color: #f9f9f9;
+    color: black;
+}
+
+.add-icon-movieCard:hover path{
+    fill: black;
+    opacity: 1;
+}
+
+.add-icon-movieCard:hover g{
+    opacity: 1;
+}
+
+
 
 .add-icon-userID-null {
     display: none;
