--- a/src/styles/moviesAndSeries.css
+++ b/src/styles/moviesAndSeries.css
@@ -32,4 +32,5 @@
     grid-template-rows: repeat(auto-fit, minmax(150px, 150px));
     gap: 50px;
     justify-content: center;
+    margin-bottom: 80px;
 }
