--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,6 +1,7 @@
 .search-section{
-    width: 100%; height: 100%;
+    width: 100%; height: 90%;
     display: flex; flex-flow: column;
+    flex: 1 0 auto;
     justify-content: flex-start;
     
 }
@@ -67,12 +68,14 @@
     top: 20px;
 }
 
-.filtered-movies {
+#filtered-movies {
     width: 100%; height: 100%;
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
-    grid-template-rows: repeat(auto-fit, minmax(150px, 150px));
+    grid-template-columns: repeat(auto-fit, 250px);
+    grid-template-rows: repeat(auto-fit, 150px);
     gap: 50px;
-    padding: 50px;
+    padding: 25px 5px 50px;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
 }
